--- a/package.json
+++ b/package.json
@@ -10,10 +10,32 @@
   "author": "Joel Sequeira",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.2",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-rate-limit": "^2.5.0",
     "helmet": "^3.1.0",
-    "morgan": "^1.7.0"
+    "mongoose": "^4.6.7",
+    "morgan": "^1.7.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.25.0",
+    "dotenv": "^2.0.0",
+    "foundation-sites": "^6.2.4",
+    "jquery": "^3.1.1",
+    "node-sass": "^3.11.3",
+    "sass-loader": "^4.0.2",
+    "script-loader": "^0.7.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3"
   }
 }
