--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-fontawesome": "^1.4.0",
     "react-router": "^2.8.1"
   },
   "devDependencies": {
