--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.15.2",
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-rate-limit": "^2.5.0",
