--- a/client/package.json
+++ b/client/package.json
@@ -51,8 +51,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "deploy": "yarn build && surge --project ./build --domain https://www.ucsdrooms.com"
+    "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
     "collectCoverageFrom": [
